--- a/analyzer-python/Dockerfile
+++ b/analyzer-python/Dockerfile
@@ -1,1 +1,12 @@
-# Placeholder Dockerfile
+FROM python:3.11-slim
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY main.py .
+
+EXPOSE 5000
+
+CMD ["python", "main.py"]
