--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,1 +1,12 @@
-# Placeholder Dockerfile
+# Etapa 1: Build da aplicação
+FROM maven:3.8.5-openjdk-17 AS builder
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# Etapa 2: Imagem final para execução
+FROM openjdk:17
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
+EXPOSE 8080
+ENTRYPOINT ["java", "-jar", "app.jar"]
