--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,21 +48,12 @@ services:
     build:
       context: ./analyzer-python
     container_name: resume_analyzer_python
+    environment:
+      - HUGGINGFACE_API_KEY=${HUGGINGFACE_API_KEY}
     ports:
       - "5000:5000"
     networks:
       - resume-network
-
-  frontend:
-    build:
-      context: ./frontend
-    container_name: resume_frontend
-    ports:
-      - "3000:3000"
-    networks:
-      - resume-network
-    depends_on:
-      - backend
 
 volumes:
   postgres_data:
